--- a/static/css/result-page.css
+++ b/static/css/result-page.css
@@ -2,9 +2,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
   grid-gap: 1rem;
+  justify-content: space-around;
+  justify-items: center;
 }
 .result_head {
   padding: 2rem 0.5rem;
+  text-align: center;
+  margin-top: 1rem;
 }
 .card-body {
   display: flex;
