--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -22,8 +22,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    {% block style %}{% endblock %}
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/style.css' %}"
+    />
   </head>
   <body>
     <!-- Navbar-->
