--- a/templates/main_app/index.html
+++ b/templates/main_app/index.html
@@ -1,7 +1,4 @@
-{% extends "base/base.html" %} {% load static %}
-
-<!-- Style-->{% block style %}
-<link rel="stylesheet" href="{% static 'css/home.css' %}" />{% endblock %}
+{% extends "base/base.html" %}
 
 <!-- Body -->{% block content %}
 <main class="container">
@@ -41,5 +38,4 @@
     </div>
   </div>
 </main>
-<script src="{% static 'js/main.js' %}"></script>
 {% endblock %}
