--- a/templates/main_app/search-result.html
+++ b/templates/main_app/search-result.html
@@ -1,6 +1,4 @@
-{% extends "base/base.html" %} {% load static %}
-<!-- Style-->{% block style %}
-<link rel="stylesheet" href="{% static 'css/result-page.css' %}" /> {%endblock%}
+{% extends "base/base.html" %}
 
 <!-- Body -->{% block content %}
 <main class="container">
